# jos

./: .gitignore  Cargo.toml  README.md  TODO  aarch64-jos.json  build.rs  flake.nix  riscv_32-jos.json  x86_64-jos.json
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: boot.md  building-and-running.md  capabilities.md  dst.md  qemu.md  setup.md  testing.md  vga.md
jos-core/: Cargo.toml
jos-core/src/: bitmap.rs  cap_rights.rs  cap_space.rs  cap_table.rs  clock.rs  endpoint.rs  fault.rs  frame_allocator.rs  lib.rs  notification.rs  page_table.rs  placement.rs  pte.rs  ring_buffer.rs  rng.rs  run_queue.rs  timer.rs  trace.rs  untyped.rs
jos-core/tests/: dst_capspace.rs  dst_clock.rs  dst_faults.rs  dst_ipc.rs  dst_recv_timeout.rs  dst_timeout.rs
kernel/: Cargo.toml  build.rs  link.ld  riscv_32-jos.json
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  cap.rs  clock.rs  cpu_local.rs  executor.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  memory.rs  serial.rs  syscall.rs  trace.rs  usermode.rs  vga_buffer.rs  vspace.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: boot.s  mod.rs  multiboot2.rs
kernel/tests/: async_ipc.rs  basic_boot.rs  cap_cnode.rs  cap_ipc.rs  cap_slice1.rs  clock_irq_safety.rs  executor.rs  keyboard_stream.rs  notification.rs  paging_heap.rs  recv_timeout.rs  retype_invoke.rs  revoke_blocked_ipc.rs  should_panic.rs  stack_overflow.rs  syscall.rs  timer_interrupt.rs  trace.rs  two_thread_cspace.rs  usermode.rs  vspace.rs
nix/: kani.nix  verus.nix
scripts/: run-qemu.sh
src/: lib.rs  main.rs  should_panic.rs  vga_buffer.rs
src/arch/x86_64/: boot.s
tests/: basic_boot.rs  should_panic.rs
