# jos workspace.
#
# layout rationale (see .claude/VISION.md and .claude/memory):
#   kernel/    the bootable kernel binary. builds bare-metal via its own
#              kernel/.cargo/config.toml (custom target + build-std). asm, MMIO.
#   jos-core/  pure no_std logic with NO hardware deps (cap table, ring buffers,
#              bitmaps, page-table math, scheduler algorithms). builds on the
#              host so it can be exercised under `cargo test`, Miri, and Kani.
#
# the bare-metal target lives in kernel/.cargo/config.toml (NOT here) so that
# jos-core and future host-testable crates compile for the host by default.
[workspace]
resolver = "2"
members = [
    "kernel",
    "jos-core",
]

[workspace.package]
edition = "2024"
authors = ["Jason Devers <dev.json@gmail.com>"]

# overflow checks on in every profile: turns silent wrapping into a loud panic,
# part of the stage 0 verification hygiene (see the roadmap).
[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true
