[package]
name = "jos-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

# pure no_std logic with no hardware dependencies. it builds for the host (so
# `cargo test`, Miri, and Kani can exercise it) and for the kernel's bare-metal
# target alike, because it never touches asm, MMIO, or platform intrinsics.
[dependencies]

[features]
default = []
# enabled when compiled under `cargo kani` to gate proof harnesses.
kani = []

[lints.rust]
# `cargo kani` injects --cfg=kani at the compiler level; declare it here so
# rustc does not emit unexpected_cfgs warnings when the feature is absent.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
